# alpha

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DOCUMENTATION_PLAN.md  LICENSE  README.md  config.template.yaml  lcov.info  mkdocs.yml  pyproject.toml  test_pre_process.sh  tox.ini
.github/workflows/: python-app.yml  python-publish.yml
api_tests/: conftest.py  test_authentication.py
coverage/: lcov.info
docs/: index.md  installation.md  quickstart.md  requirements.txt
docs/concepts/: concepts.md  dependency-injection.md  design-concepts.md  design-principles.md  index.md  repository-pattern.md
docs/guides/: api-generation.md  authentication.md  database-interaction.md  database.md  flask-integration.md  index.md
docs/reference/: adapters.md  domain-models.md  encoder.md  exceptions.md  factories.md  index.md  interfaces.md  providers.md  repositories.md  services.md  utils.md
docs/reference/adapters/: index.md  rest_api_unit_of_work.md  sqla_unit_of_work.md
docs/reference/domain/: index.md
docs/reference/factories/: index.md  jwt_factory.md  logging_handler_factory.md  (+5 more)
docs/stylesheets/: mkdocstrings.css
example/: pyproject.toml
example/specification/: openapi.yaml
example/src/example/: __init__.py
integration_test_deps/: docker-compose.yaml  openldap-entrypoint.sh
integration_test_deps/ldif/: custom.ldif
integration_test_deps/realm/: test-realm.json
specification/: example.openapi.yaml
src/alpha/: __init__.py  cli.py  encoder.py  exceptions.py
tests/: conftest.py  test_cli.py  test_encoder.py
tests/adapters/: conftest.py  test_rest_api_unit_of_work.py  test_sqla_unit_of_work.py
tests/containers/: conftest.py  test_container.py
tests/factories/: conftest.py  test_class_factories.py  test_field_iterator.py  test_jwt_factory.py  test_logger_handler_factory.py  test_model_class_factory.py  test_password_factory.py  test_request_factory.py  test_response_factory.py  test_type_factories.py
tests/fixtures/: _api_classes.py  _attrs_models.py  _domain_models.py  _pydantic_models.py  class_factories.py  fake_database_connector.py  fake_factory_classes.py  fake_provider.py  fake_service_class.py  fake_session.py  fake_uow_repositories.py  logging.py  type_factories.py
tests/integration/: _classes.py  _filters.py  conftest.py  test_authentication_provider_integration.py  test_factories.py  test_ldap_provider.py  test_model_class_factory.py  test_oidc_provider.py  test_unitofwork_repository_queryclauses.py
tests/mixins/: conftest.py  test_jwt_provider.py
tests/openapi/: conftest.py  test_array.py  test_authentication.py  test_check_datetime_tz_offset.py  test_check_datetime_tz_utc.py  test_date.py  test_datetime.py  test_exceptions.py  test_factories.py  test_filelist.py  test_float.py  test_integer.py  test_permission_management.py  test_responses.py  test_string.py
tests/providers/: conftest.py  test_database_provider.py  test_ldap_provider.py  test_oidc_provider.py
tests/repositories/: conftest.py  test_rest_api_repository.py  test_sql_alchemy_repository.py
tests/services/: conftest.py  test_authentication_service.py  test_user_lifecycle_management.py
tests/utils/: conftest.py  test_is_pydantic.py  test_logging_configurator.py  test_logging_configurator_config.py  test_logging_level_checker.py  test_request_headers.py  test_response_object.py  test_secret_generator.py  test_verify_identity.py
(+214 files in other folders)
